# si-scanner

./: AGENT.md  Cargo.toml  README.md
memory/: JOURNAL.md
src/: catalog.rs  extractor.rs  github.rs  graph.rs  lib.rs  report.rs
